app-deploy/gateway-api/dev/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-nginx-gateway-dev-secrets
  namespace: dev
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: nginx-gateway
  to:
  - group: ""
    kind: Secret
    name: app-tls-cert
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-nginx-gateway-argocd-secrets
  namespace: argocd
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: nginx-gateway
  to:
  - group: ""
    kind: Secret
    name: argocd-tls-cert
