app-deploy/gateway-api/dev/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
    - name: https-todo
      hostname: "todo.anishbista.xyz"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: app-tls-cert
            namespace: dev
      allowedRoutes:
        namespaces:
          from: All

    - name: https-todoback
      hostname: "todoback.anishbista.xyz"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: app-tls-cert
            namespace: dev
      allowedRoutes:
        namespaces:
          from: All

    - name: https-argocd
      hostname: "argocd.anishbista.xyz"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls-cert
            namespace: argocd
      allowedRoutes:
        namespaces:
          from: All

    - name: http-acme
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
